# forest

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: config.cmake.in  forest_version.hpp.in
example/: CMakeLists.txt  forest-example.cpp
include/forest/: forest.hpp
